--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,13 @@
     opacity: 70%;
 }
 
+.height15{
+    height: 15vh;
+}
+.height10{
+    height: 10vh;
+}
+
 .z10{
     z-index: 10;
 }
@@ -86,8 +93,17 @@
     height: 700px;
     width: 100%;
     overflow: hidden;
+    font-family: 'Indie Flower', cursive;
 }
 
 .top{
     top:0px;
+}
+
+.width100{
+    width: 100px;
+}
+
+.navItemSize{
+
 }
