prepping for design changes

--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,10 @@
     font-family: 'Indie Flower', cursive;
 }
 
+.indieFlower{
+    font-family: 'Indie Flower', cursive;
+}
+
 .top{
     top:0px;
 }
